# rjson

./: .gitignore  README.md  pyproject.toml  template_evaluator.py  template_parser.py  template_runtime.py
docs/: ADDONS.md  CLI.md  DEVELOPER.md  FUNCTIONS.md  TEMPLATE_LANGUAGE.md  USAGE.md
examples/addons/: example_addon.py  http_client.py  math_utils.py  stateful_cache.py  string_utils.py
examples/templates/: complex_template.yml  example_template.json  example_template.yml  http_template.yml
rjson/: __init__.py  cli.py  helpers.py  template_evaluator.py  template_lexer.py  template_parser.py  template_runtime.py
